--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
+    <script type="text/javascript" src="static/js/easeljs-0.6.0.min.js"></script>
+    <script type="text/javascript" src="static/js/filters/Filter.js"></script>
+    <script type="text/javascript" src="static/js/filters/ColorFilter.js"></script>
+    
     <script type="text/javascript" src="static/js/Key.js"></script>
     <script type="text/javascript" src="static/js/Direction.js"></script>
     <script type="text/javascript" src="static/js/Tank.js"></script>
     <script type="text/javascript" src="static/js/Main.js"></script>
-    <script type="text/javascript" src="static/js/easeljs-0.6.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 </head>
 <body onload="Main.init();">
