--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="static/js/Key.js"></script>
     <script type="text/javascript" src="static/js/Direction.js"></script>
     
+    <script type="text/javascript" src="static/js/BlockType.js"></script>
+    <script type="text/javascript" src="static/js/Block.js"></script>
     <script type="text/javascript" src="static/js/World.js"></script>
     <script type="text/javascript" src="static/js/Tank.js"></script>
     <script type="text/javascript" src="static/js/Main.js"></script>
