--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="static/js/BlockType.js"></script>
     <script type="text/javascript" src="static/js/Block.js"></script>
     <script type="text/javascript" src="static/js/DebugGrid.js"></script>
+    <script type="text/javascript" src="static/js/Explode.js"></script>
     <script type="text/javascript" src="static/js/Bullet.js"></script>
     <script type="text/javascript" src="static/js/World.js"></script>
     <script type="text/javascript" src="static/js/Tank.js"></script>
