--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="static/js/easeljs/filters/Filter.js"></script>
     <script type="text/javascript" src="static/js/easeljs/filters/ColorFilter.js"></script>
     
-    <script type="text/javascript" src="static/js/cometd/jquery-1.8.3.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     
     <script type="text/javascript" src="static/js/cometd/cometd-namespace.js"></script>
     <script type="text/javascript" src="static/js/cometd/cometd-json.js"></script>
