Now it's displayed

--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 </head>
 <body onload="Main.init();" onbeforeunload="Main.stop();">
+<img src="/static/images/true_sprites.png" id="spritesheet" style="display: none;"/>
 
 <canvas id="canvas" width="800" height="576">
     
