--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -26,6 +26,9 @@
     <script type="text/javascript" src="static/js/Tank.js"></script>
     <!--<script type="text/javascript" src="static/js/Comet.js"></script>-->
     <script type="text/javascript" src="static/js/Main.js"></script>
+
+    <script type="text/javascript" src="static/js/TankRenderer.js"></script>
+
     
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 </head>
