--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -9,6 +9,8 @@
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
+
     <script type="text/javascript" src="//code.createjs.com/easeljs-0.7.1.min.js"></script>
     <script type="text/javascript" src="static/js/easeljs/filters/Filter.js"></script>
     <script type="text/javascript" src="static/js/easeljs/filters/ColorFilter.js"></script>
@@ -26,8 +28,10 @@
     <script type="text/javascript" src="static/js/Tank.js"></script>
     <!--<script type="text/javascript" src="static/js/Comet.js"></script>-->
     <script type="text/javascript" src="static/js/Main.js"></script>
+    <script type="text/javascript" src="static/js/guid.js"></script>
 
-    <script type="text/javascript" src="static/js/TankRenderer.js"></script>
+    <script type="text/javascript" src="static/js/renderer/TankRenderer.js"></script>
+    <script type="text/javascript" src="static/js/renderer/BulletRenderer.js"></script>
 
     
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
