--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -3,7 +3,8 @@
 <head>
     <script type="text/javascript">
         config = {
-            host: 'localhost:8080'
+            host: 'localhost',
+            port: 8080
         };
     </script>
 
@@ -32,6 +33,8 @@
 
     <script type="text/javascript" src="static/js/renderer/TankRenderer.js"></script>
     <script type="text/javascript" src="static/js/renderer/BulletRenderer.js"></script>
+
+    <script type="text/javascript" src="static/js/Socket.js"></script>
 
     
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
