--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -30,9 +30,11 @@
     <!--<script type="text/javascript" src="static/js/Comet.js"></script>-->
     <script type="text/javascript" src="static/js/Main.js"></script>
     <script type="text/javascript" src="static/js/guid.js"></script>
+    <script type="text/javascript" src="static/js/BlockHelper.js"></script>
 
     <script type="text/javascript" src="static/js/renderer/TankRenderer.js"></script>
     <script type="text/javascript" src="static/js/renderer/BulletRenderer.js"></script>
+    <script type="text/javascript" src="static/js/renderer/BlockRenderer.js"></script>
 
     <script type="text/javascript" src="static/js/Socket.js"></script>
 
