Not used either

--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 </head>
-<body onload="app.init();" onbeforeunload="app.stop();">
+<body onload="app.init();">
 <img src="/static/images/true_sprites.png" id="spritesheet" style="display: none;"/>
 
 <canvas id="canvas" width="800" height="576">
